// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should generate seo information > Should contain basic properties 1`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/",
      "rel": "canonical",
    },
  ],
  [
    "link",
    {
      "href": "https://exmaple.com/zh/",
      "hreflang": "zh-cn",
      "rel": "alternate",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "This is a home page.",
      "property": "og:description",
    },
  ],
  [
    "meta",
    {
      "content": "website",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale",
    },
  ],
  [
    "meta",
    {
      "content": "zh-CN",
      "property": "og:locale:alternate",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"WebPage","name":"","description":"This is a home page."}",
  ],
]
`;

exports[`Should generate seo information > Should contain basic properties 2`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/description.html",
      "rel": "canonical",
    },
  ],
  [
    "link",
    {
      "href": "https://exmaple.com/zh/description.html",
      "hreflang": "zh-cn",
      "rel": "alternate",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/description.html",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "Description Test",
      "property": "og:title",
    },
  ],
  [
    "meta",
    {
      "content": "This page is used to test the description of the page.",
      "property": "og:description",
    },
  ],
  [
    "meta",
    {
      "content": "article",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale",
    },
  ],
  [
    "meta",
    {
      "content": "zh-CN",
      "property": "og:locale:alternate",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"Article","headline":"Description Test","image":[""],"dateModified":null,"author":[]}",
  ],
]
`;

exports[`Should generate seo information > Should contain basic properties 3`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/example.html",
      "rel": "canonical",
    },
  ],
  [
    "link",
    {
      "href": "https://exmaple.com/zh/example.html",
      "hreflang": "zh-cn",
      "rel": "alternate",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/example.html",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "Heading 1",
      "property": "og:title",
    },
  ],
  [
    "meta",
    {
      "content": "Heading 2 Heading 3 Heading 4 Heading 5 Heading 6 Text This sentence has bold、italic and style text. Paragraph This is a paragraph. This is another paragraph. Line Break I would...",
      "property": "og:description",
    },
  ],
  [
    "meta",
    {
      "content": "article",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale",
    },
  ],
  [
    "meta",
    {
      "content": "zh-CN",
      "property": "og:locale:alternate",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"Article","headline":"Heading 1","image":[""],"dateModified":null,"author":[]}",
  ],
]
`;

exports[`Should generate seo information > Should contain basic properties 4`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/zh/",
      "rel": "canonical",
    },
  ],
  [
    "link",
    {
      "href": "https://exmaple.com/",
      "hreflang": "en-us",
      "rel": "alternate",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/zh/",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "这是一个主页。",
      "property": "og:description",
    },
  ],
  [
    "meta",
    {
      "content": "website",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "zh-CN",
      "property": "og:locale",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale:alternate",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"WebPage","name":"","description":"这是一个主页。"}",
  ],
]
`;

exports[`Should generate seo information > Should contain basic properties 5`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/zh/description.html",
      "rel": "canonical",
    },
  ],
  [
    "link",
    {
      "href": "https://exmaple.com/description.html",
      "hreflang": "en-us",
      "rel": "alternate",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/zh/description.html",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "描述测试",
      "property": "og:title",
    },
  ],
  [
    "meta",
    {
      "content": "这个页面用于测试页面描述",
      "property": "og:description",
    },
  ],
  [
    "meta",
    {
      "content": "article",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "zh-CN",
      "property": "og:locale",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale:alternate",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"Article","headline":"描述测试","image":[""],"dateModified":null,"author":[]}",
  ],
]
`;

exports[`Should generate seo information > Should contain basic properties 6`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/zh/example.html",
      "rel": "canonical",
    },
  ],
  [
    "link",
    {
      "href": "https://exmaple.com/example.html",
      "hreflang": "en-us",
      "rel": "alternate",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/zh/example.html",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "一级标题",
      "property": "og:title",
    },
  ],
  [
    "meta",
    {
      "content": "二级标题 三级标题 四级标题 五级标题 六级标题 Text 这句话里拥有加粗、倾斜和 段落 这是一个段落。 这是另一个段落。 换行 这是一句话不过我要在这里 换行 上方的代码中 这里 后面有两个空格 引用 引用也可以连用 可以添加额外的大于号制造更深的引用 列表 无序列表 无序列表项; 无序列表项; 列表中的列表项; 更多的列表项; 更多的列表项; 更...",
      "property": "og:description",
    },
  ],
  [
    "meta",
    {
      "content": "article",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "zh-CN",
      "property": "og:locale",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale:alternate",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"Article","headline":"一级标题","image":[""],"dateModified":null,"author":[]}",
  ],
]
`;

exports[`Should generate seo information > Should contain basic properties 7`] = `
[
  [
    "link",
    {
      "href": "https://exmaple.com/404.html",
      "rel": "canonical",
    },
  ],
  [
    "meta",
    {
      "content": "https://exmaple.com/404.html",
      "property": "og:url",
    },
  ],
  [
    "meta",
    {
      "content": "website",
      "property": "og:type",
    },
  ],
  [
    "meta",
    {
      "content": "en-US",
      "property": "og:locale",
    },
  ],
  [
    "script",
    {
      "type": "application/ld+json",
    },
    "{"@context":"https://schema.org","@type":"WebPage","name":""}",
  ],
]
`;
